...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="61w-p6-bQT">
                                <rect key="frame" x="10" y="812" width="394" height="50"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="L9e-im-bpK"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Add To Cart"/>
                                <connections>
                                    <action selector="AddToCartAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Mep-pR-wXW"/>
                                </connections>
                            </button>
                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="large" id="mfQ-yq-udE">
                                <rect key="frame" x="0.0" y="429" width="414" height="37"/>
...
                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                            <nil key="textColor"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Please Enter Delivery Address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2uP-Oa-cc4">
                                            <rect key="frame" x="10" y="46" width="394" height="34"/>
                                            <accessibility key="accessibilityConfiguration" label="addressTextField"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                            <textInputTraits key="textInputTraits"/>
                                            <connections>
                                                <action selector="addressAction:" destination="szY-mq-TM9" eventType="editingChanged" id="Qpb-ps-SH6"/>
                                            </connections>
                                        </textField>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="plF-Tg-tuf">
                                <rect key="frame" x="10" y="812" width="394" height="50"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="WG5-6v-nuR"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Confirm Order Placement"/>
                                <connections>
                                    <action selector="confirmOrderAction:" destination="szY-mq-TM9" eventType="touchUpInside" id="NNF-Td-tDE"/>
                                </connections>
                            </button>
                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="xIu-YT-AiO">
                                <rect key="frame" x="188.5" y="429.5" width="37" height="37"/>
...
                    <view key="view" contentMode="scaleToFill" id="z72-bd-bgO">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Order placed successfully" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9c9-es-uGn">
                                <rect key="frame" x="20" y="94" width="374" height="24"/>
                                <accessibility key="accessibilityConfiguration" label="successLabel"/>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uV8-gL-viw">
                                <rect key="frame" x="157" y="138" width="100" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="0Zs-3I-E5A"/>
                                    <constraint firstAttribute="width" constant="100" id="mdc-zh-6pk"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Dismiss"/>
                                <connections>
                                    <action selector="dismissAction:" destination="MeJ-HB-J4H" eventType="touchUpInside" id="Dsz-Wd-CkM"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="jtq-3c-zYV"/>
...
